// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavigationPrompt Snapshots should render the NotificationDialog when state is present 1`] = `
<ContextProvider
  value={
    {
      "registerPrompt": [Function],
      "unregisterPrompt": [Function],
    }
  }
>
  <InjectIntl(NotificationDialog)
    acceptAction={
      {
        "onClick": [Function],
        "text": "Accept",
      }
    }
    buttonOrder="acceptFirst"
    dialogTitle="Test Title"
    rejectAction={
      {
        "onClick": [Function],
        "text": "Reject",
      }
    }
    startMessage="Test Message"
    variant="hazard-medium"
  />
</ContextProvider>
`;

exports[`NavigationPrompt Snapshots should render the NotificationDialog with accept as the primary action 1`] = `
<ContextProvider
  value={
    {
      "registerPrompt": [Function],
      "unregisterPrompt": [Function],
    }
  }
>
  <InjectIntl(NotificationDialog)
    acceptAction={
      {
        "onClick": [Function],
        "text": "Accept",
      }
    }
    buttonOrder="acceptFirst"
    dialogTitle="Test Title"
    emphasizedAction="accept"
    rejectAction={
      {
        "onClick": [Function],
        "text": "Reject",
      }
    }
    startMessage="Test Message"
    variant="hazard-medium"
  />
</ContextProvider>
`;

exports[`NavigationPrompt Snapshots should render the NotificationDialog with reject as the primary action 1`] = `
<ContextProvider
  value={
    {
      "registerPrompt": [Function],
      "unregisterPrompt": [Function],
    }
  }
>
  <InjectIntl(NotificationDialog)
    acceptAction={
      {
        "onClick": [Function],
        "text": "Accept",
      }
    }
    buttonOrder="rejectFirst"
    dialogTitle="Test Title"
    emphasizedAction="reject"
    rejectAction={
      {
        "onClick": [Function],
        "text": "Reject",
      }
    }
    startMessage="Test Message"
    variant="hazard-medium"
  />
</ContextProvider>
`;

exports[`NavigationPrompt Snapshots should render with children 1`] = `
<ContextProvider
  value={
    {
      "registerPrompt": [Function],
      "unregisterPrompt": [Function],
    }
  }
>
  <withPromptRegistration(MockPromptBase) />
</ContextProvider>
`;

exports[`NavigationPrompt Snapshots should render with minimal props 1`] = `
<ContextProvider
  value={
    {
      "registerPrompt": [Function],
      "unregisterPrompt": [Function],
    }
  }
/>
`;
